# OpenCTR

./: .gitignore  .mailmap  .travis.yml  AUTHORS.rst  CMakeLists.txt  CPackConfig.cmake.in  CREDITS.rst  LICENSE.rst  README.html  README.rst
.travis/: build.sh  common.sh  deploy.sh  onerror.sh  setup.sh
CMake/: CTRConfig.cmake.in  CTRHost.cmake  CTRMacros.cmake  CTRToolchain.cmake  FindSphinx.cmake  OpenCTR-Toolchain.cmake  OpenCTR.cmake.in  openctr-config.cmake.in  openctr-macros.cmake.in
CMake/Toolchain/: Linux.cmake  OSX.cmake  Win32.cmake
cmake/Modules/: CMakePackageConfigHelpers.cmake  CMakeProjectSettings.cmake  CMakeProjectVersion.cmake  CTR_ROOT.cmake.in  FindSphinx.cmake  OpenCTR-Toolchain.cmake
cmake/Modules/Platform/: CTR.cmake
crt0/: 3dsx.ld  3dsx.specs  3dsx_crt0.s  CMakeLists.txt
doc/: 3DSX.rst  Authors.rst  Building.rst  CMake.rst  CMakeLists.txt  Contributing.rst  Credits.rst  FAQ.rst  FDL.rst  GPL.rst  GettingStarted.rst  Glossary.rst  Introduction.rst  Projects.rst  Releases.rst  Tools.rst  conf.py  conf.py.in  declarations.txt  index.rst
doc/rst/: index.rst
projects/: CMakeLists.txt
toolchain/: CMakeLists.txt
toolchain/binutils/: CMakeLists.txt
toolchain/gcc/: CMakeLists.txt
toolchain/llvm/: CMakeLists.txt
toolchain/patches/: binutils-2.25.1.patch  binutils-2.25.patch  clang-3.6.0.patch  clang-3.7.1.patch  gcc-4.9.2.patch  gcc-5.2.0.patch  gcc-5.3.0.patch  llvm-3.6.0.patch  llvm-3.7.1.patch  newlib-2.1.0.patch  newlib-2.2.0.patch  newlib-2.3.0.patch
tools/: CMakeLists.txt
